--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "crypto-js": "^4.0.0",
     "date-fns": "^2.9.0",
     "emailjs-com": "^2.4.1",
